# lightminer-rust

./: Cargo.toml  README.md  ROADMAP.md  run_log.sh
.github/workflows/: docs.yml
docs/assets/: screenshot.png.placeholder
src/: config.rs  main.rs  presets.rs
src/manager/: commands.rs  events.rs  handshake.rs  metrics.rs  mod.rs  runner.rs  session.rs  state.rs
src/miner/: job.rs  mod.rs
src/network/: mod.rs  proxy.rs
src/protocol/: mod.rs
src/ui/: mod.rs  state.rs  widgets.rs
