[package]
name = "lightminer-rust"
version = "0.0.2"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Mining
sha2 = "0.10"
hex = "0.4"

# TUI
ratatui = "0.29"
crossterm = "0.28"
