[package]
name = "lightminer-rust"
version = "0.0.8"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Proxy
tokio-socks = "0.5"
url = "2"

# Mining
sha2 = "0.10"
hex = "0.4"
scrypt = "0.11"
num-bigint = "0.4"
num-traits = "0.2"

# TUI
ratatui = "0.29"
crossterm = "0.28"

# Utils
num_cpus = "1"
